<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89FF00"
    tools:context=".Contact_Us">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="516dp"
        android:background="@drawable/round_corner_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="83dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/_00px_colourbox25634084"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="86dp"
            android:layout_height="97dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/facebook_dark_background" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/c62c055ede6aadbb1f94a555071c98b9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="73dp"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/_006dc7319d99a139727482e4d75b1f2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textabout2"
            android:layout_width="255dp"
            android:layout_height="51dp"
            android:layout_marginBottom="36dp"
            android:text="@string/text_about2"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textuser"
            android:layout_width="103dp"
            android:layout_height="37dp"
            android:layout_marginTop="60dp"
            android:text="@string/text_user"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textfacebook"
            android:layout_width="188dp"
            android:layout_height="34dp"
            android:layout_marginTop="52dp"
            android:text="@string/text_facebook"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textuser" />

        <TextView
            android:id="@+id/textinsta"
            android:layout_width="178dp"
            android:layout_height="38dp"
            android:layout_marginTop="72dp"
            android:text="@string/text_insta"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textfacebook" />

        <TextView
            android:id="@+id/textgmail"
            android:layout_width="178dp"
            android:layout_height="42dp"
            android:layout_marginTop="60dp"
            android:text="@string/text_gmail"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/textinsta" />

        <Button
            android:id="@+id/callbutton"
            android:layout_width="81dp"
            android:layout_height="42dp"
            android:layout_marginTop="48dp"
            android:text="@string/callbutton"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textuser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="85dp"
            android:layout_height="28dp"
            android:layout_marginTop="28dp"
            android:text="@string/heading"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/callbutton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="153dp"
        android:layout_height="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/text_contact"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="357dp"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="36dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_contact" />
</androidx.constraintlayout.widget.ConstraintLayout>