<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89FF00"
    tools:context=".Feedback">

    <TextView
        android:id="@+id/text_feedback"
        android:layout_width="335dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/autour_one"
        android:text="We Will Really Happy From You!"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="357dp"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_feedback" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="351dp"
        android:layout_height="552dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_corner_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_feedback">

        <TextView
            android:id="@+id/text_feedbak2"
            android:layout_width="168dp"
            android:layout_height="35dp"
            android:layout_marginTop="28dp"
            android:text="@string/text_feedback2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_feedback3"
            android:layout_width="179dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="48dp"
            android:text="@string/text_feedback3"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_feedbak2" />

        <TextView
            android:id="@+id/text_feedback4"
            android:layout_width="192dp"
            android:layout_height="35dp"
            android:layout_marginBottom="312dp"
            android:text="@string/text_feedback4"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.704"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit1"
            app:backgroundTint="@android:color/holo_green_dark"
            app:layout_constraintBottom_toTopOf="@+id/With"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="289dp"
            android:layout_height="142dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="  Just Idea"
            android:inputType="textMultiLine"
            android:lines="8"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/submit1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_feedback4"
            app:layout_constraintVertical_bias="0.793" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="240dp"
            android:layout_height="47dp"
            android:layout_marginBottom="364dp"
            android:background="@android:color/background_light"
            android:numStars="5"
            android:rating="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/With"
            android:layout_width="108dp"
            android:layout_height="36dp"
            android:layout_marginBottom="48dp"
            android:text="@string/With"
            app:backgroundTint="@android:color/holo_green_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


