<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89FF00"
    tools:context=".About_Us">

    <TextView
        android:id="@+id/Text"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/Text"
        android:textColor="#2C1B1B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="600dp"
        android:background="@drawable/round_corner_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="260dp"
            android:layout_height="135dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@drawable/foodie_inverted__white_" />

        <TextView
            android:id="@+id/text01"
            android:layout_width="212dp"
            android:layout_height="59dp"
            android:text="@string/text1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text02"
            android:layout_width="305dp"
            android:layout_height="140dp"
            android:text="@string/text02"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text01"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="399dp"
            android:layout_height="143dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text02"
            app:layout_constraintVertical_bias="0.257"
            tools:srcCompat="@drawable/_d06c742_15cc_49b2_8845_7ef42d0c9f97" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="95dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.577"
            tools:srcCompat="@drawable/google_feature_image_dark" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="84dp"
            android:layout_height="55dp"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.552"
            tools:srcCompat="@drawable/facebook_dark_background" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="78dp"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:srcCompat="@drawable/youtube_dark_796x417" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/rate"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginBottom="32dp"
        android:text="@string/rate"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>